when drawing a line, we check if the line is only one point, to even draw a line this fixes bug #709, but it's not quite good in my opinion (Stephan, please could you review?)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@18050 a95241bf-73f2-0310-859d-f6bbb57e9c96